--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Navigation and Links - Contact</title>
         <!-- TO DO: ADD YOUR NAME TO THE AUTHOR TAG HERE -->
-        <meta name="author" content="">
+        <meta name="author" content="Angel Duarte">
         <meta name="description" content="Learn about the different types of anchor tags, or links, that you can use when building a page for the web. Make it possible to navigate between pages, send an email, call a number, and more with anchor tags!">
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -13,9 +13,13 @@
             <h1>Navigation and Links</h1>
 
             <!-- TO DO: CREATE THE NAVIGATION FOR THE SITE HERE -->
-            Home
-            About
-            Contact
+            <!-- Complete -->
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
         </header>
 
         <main>
@@ -61,12 +65,14 @@
                 <h2>Call or Email Us</h2>
 
                 <!-- TO DO: MAKE THE PHONE NUMBER AND EMAIL ADDRESS BELOW INTO PROPERLY FORMATTED LINKS INSIDE OF THE ADDRESS TAG -->
+                <!-- Complete -->
                 <address>
-                    (555) 555-5555
-                    Email Jessica Barnett
+                    <a href="tel:+5555555555">(555) 555-5555</a><br>
+                    <a href="mailto:jbarnett@asu.edu">Email Jessica Barnett</a>
                 </address>
                 <!-- TO DO: COMPLETE THE LINK BELOW SO THAT IT WILL TAKE THE USER TO THE CONTACT SECTION ON THE CONTACT PAGE WHEN CLICKED -->
-                <p>You can also <a href="#">contact us by filling out the contact form on our site</a>.</p>
+                <!-- Complete -->
+                <p>You can also <a href="contact.html#contact">contact us by filling out the contact form on our site</a>.</p>
             </section>
             <p>Copyright &copy; 2023 - GIT215 - Prof. Barnett</p>
         </footer>
