--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,10 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
+            </nav>
         </header>
 
         <main>
